clean code and document
